# DGM-HUB

./: .gitignore  DGM-HUB_CONTEXT.md  DGM-HUB_CONTEXT_NEXT_CHAT.md  DGM-HUB_TREE.txt  DGM-HUB_tree.txt  DGM-MAT_TREE.txt  DGM-MCP_TREE.txt  ENTRYPOINT_REPORT.md  EXECUTION_TRACE.md  IMPORT_GRAPH.md  POST_MERGE_RUNTIME_VALIDATION.md  README.md  REPO_RUNTIME_REPORT.json  RUNTIME_EXECUTION_REPORT.md  RUNTIME_FIX_REPORT.md  RUNTIME_PHASE2_REPORT.md  RUNTIME_VALIDATION.md  SHADOW_SYSTEMS.md  TASKEXECUTOR_AUDIT.md  TEST_PIPELINE_FIX_REPORT.md  TREE.md  context.md  context.me  local_bootstrap.py  logs.txt  pyproject.toml  run_agent.py  run_cognitive_agent.py  run_dgm_hub.py  run_task.py  run_ui.py  task_executor_patch.diff  test_imports.py  test_results.txt  tree.md
.dgm_truth/: 1780603281135.json  1780603973073.json  1780604030667.json  1780754363554.json  1780757648981.json  1780757735474.json  1780758069763.json  1780851611772.json  1780852752373.json  1780852936465.json  1781086022756.json  1781087668743.json  1781090934041.json  1781109128159.json  1781110680345.json
automation/: OLLAMA_WORKFLOW.txt  local_runner.ps1
benchmarks/: benchmark_execution_internal.py  benchmark_stress.py  benchmark_subprocess.py  benchmark_utils.py  report.md  results_internal.json  results_stress.json  results_subprocess.json  run_benchmarks.py
config/: default_config.yaml  permissions.yaml
dgm-control-ui/: index.html
docs/: ARCHITECTURE.md  PROJECT_CONTEXT.md  RUNTIME_REALITY.md
runtime/: execution_journal.jsonl  genome.json  memory.json
tests/: test_agent_metrics_e2e.py  (+5 more)
(+153 files in other folders)
